[gd_scene format=3 uid="uid://dr5mvquwuwk6a"]

[ext_resource type="PackedScene" uid="uid://ekvt1amehlo" path="res://Frameworks(YourStuff)/TrickTape/Main/main.tscn" id="1_kc4fe"]
[ext_resource type="Script" uid="uid://rh8uhaifh28m" path="res://Frameworks(YourStuff)/TrickTape/Main/game_main.gd" id="1_me4ut"]
[ext_resource type="PackedScene" uid="uid://cn4d1ulss6go1" path="res://Frameworks(YourStuff)/TrickTape/Background/parallax_background.tscn" id="2_me4ut"]
[ext_resource type="PackedScene" uid="uid://8rq22ypuy8ne" path="res://Frameworks(YourStuff)/TrickTape/Win Lose UI/win_lose_screen.tscn" id="3_pqao7"]
[ext_resource type="PackedScene" uid="uid://dolswgag5s7d7" path="res://Frameworks(YourStuff)/TrickTape/IntroductionScreen/introduction_screen.tscn" id="4_csl6d"]
[ext_resource type="Texture2D" uid="uid://dlh4rs6f6pjeo" path="res://Frameworks(YourStuff)/TrickTape/Background/Assets/blood_splatter_2.png" id="6_csl6d"]
[ext_resource type="Texture2D" uid="uid://c5ru800johnfv" path="res://Frameworks(YourStuff)/TrickTape/Background/Assets/blood_splatter_1.png" id="7_b2pfy"]

[node name="GameMain" type="Node2D" unique_id=593116048]
script = ExtResource("1_me4ut")

[node name="Node" type="Node" parent="." unique_id=1549312958]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Node" unique_id=1017227345]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Node/SubViewportContainer" unique_id=368689952]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Main" parent="Node/SubViewportContainer/SubViewport" unique_id=2065298038 instance=ExtResource("1_kc4fe")]

[node name="Background" type="Control" parent="Node" unique_id=434593767]
process_mode = 3
z_index = -10
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ParallaxBackground" parent="Node/Background" unique_id=1583370283 instance=ExtResource("2_me4ut")]

[node name="Win_Lose Screen" parent="Node" unique_id=1294610884 instance=ExtResource("3_pqao7")]
process_mode = 3

[node name="IntroductionScreen" parent="Node" unique_id=102741142 instance=ExtResource("4_csl6d")]

[node name="Blood" type="Control" parent="Node" unique_id=445502411]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBlood" type="Control" parent="Node/Blood" unique_id=2055968932]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Blood1" type="Sprite2D" parent="Node/Blood/TopBlood" unique_id=1623135038]
modulate = Color(1, 1, 1, 0)
scale = Vector2(5, 5)
texture = ExtResource("6_csl6d")
centered = false

[node name="BottomBlood" type="Control" parent="Node/Blood" unique_id=503469221]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Blood2" type="Sprite2D" parent="Node/Blood/BottomBlood" unique_id=2144078572]
modulate = Color(1, 1, 1, 0)
scale = Vector2(5, 5)
texture = ExtResource("7_b2pfy")
offset = Vector2(-13, -11)
